# onshape-mcp

./: CLAUDE.md  PLAN.md  README.md  pyproject.toml
cadkit_mcp/: __init__.py  devkit.py  hole_template.json  selection.py  server.py  sketch.py
scripts/: smoke_counterbore.py  smoke_sketch_mirror.py
tests/: test_cadkit_builders.py
